# financial_news

./: .gitignore  README.md  pyproject.toml
config/: settings.py
news_ingestion/: apps.py
