[project]
name = "financial-news"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "psycopg2-binary>=2.9.10",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "transformers>=4.53.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.4",
]
